Update API and swagger docs to use standardized GET and params Add corporate route stub
